@@ -8,24 +8,26 @@ import com.faforever.client.api.dto.CoopMission;
 import com.faforever.client.api.dto.CoopResult;
 import com.faforever.client.api.dto.FeaturedModFile;
 import com.faforever.client.api.dto.Game;
-import com.faforever.client.api.dto.GamePlayerStats;
 import com.faforever.client.api.dto.GameReview;
-import com.faforever.client.api.dto.GlobalLeaderboardEntry;
-import com.faforever.client.api.dto.Ladder1v1LeaderboardEntry;
-import com.faforever.client.api.dto.Ladder1v1Map;
+import com.faforever.client.api.dto.Leaderboard;
+import com.faforever.client.api.dto.LeaderboardEntry;
+import com.faforever.client.api.dto.LeaderboardRatingJournal;
 import com.faforever.client.api.dto.Map;
 import com.faforever.client.api.dto.MapVersion;
 import com.faforever.client.api.dto.MapVersionReview;
+import com.faforever.client.api.dto.MatchmakerQueue;
+import com.faforever.client.api.dto.MatchmakerQueueMapPool;
 import com.faforever.client.api.dto.MeResult;
 import com.faforever.client.api.dto.Mod;
+import com.faforever.client.api.dto.ModReviewsSummary;
 import com.faforever.client.api.dto.ModVersion;
 import com.faforever.client.api.dto.ModVersionReview;
+import com.faforever.client.api.dto.ModerationReport;
 import com.faforever.client.api.dto.Player;
 import com.faforever.client.api.dto.PlayerAchievement;
 import com.faforever.client.api.dto.PlayerEvent;
 import com.faforever.client.api.dto.Tournament;
 import com.faforever.client.api.dto.TutorialCategory;
-import com.faforever.client.game.KnownFeaturedMod;
 import com.faforever.client.mod.FeaturedMod;
 import com.faforever.client.util.Tuple;
 import com.faforever.client.vault.search.SearchController.SearchConfig;
@@ -51,7 +53,7 @@ public class MockFafApiAccessor implements FafApiAccessor {
 
   @Override
   public List<PlayerAchievement> getPlayerAchievements(int playerId) {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
@@ -61,7 +63,7 @@ public class MockFafApiAccessor implements FafApiAccessor {
 
   @Override
   public List<AchievementDefinition> getAchievementDefinitions() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
@@ -82,19 +84,45 @@ public class MockFafApiAccessor implements FafApiAccessor {
   public List<Mod> getMods() {
     Player uploader = new Player();
     return Arrays.asList(
-        new com.faforever.client.api.dto.Mod("1", "Mod Number One", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, Collections.emptyList(), mod()),
-        new com.faforever.client.api.dto.Mod("2", "Mod Number Two", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, Collections.emptyList(), mod()),
-        new com.faforever.client.api.dto.Mod("3", "Mod Number Three", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, Collections.emptyList(), mod()),
-        new com.faforever.client.api.dto.Mod("4", "Mod Number Four", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, Collections.emptyList(), mod()),
-        new com.faforever.client.api.dto.Mod("5", "Mod Number Five", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, Collections.emptyList(), mod()),
-        new com.faforever.client.api.dto.Mod("6", "Mod Number Six", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, Collections.emptyList(), mod()),
-        new com.faforever.client.api.dto.Mod("7", "Mod Number Seven", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, Collections.emptyList(), mod()),
-        new com.faforever.client.api.dto.Mod("8", "Mod Number Eight", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, Collections.emptyList(), mod())
+        new Mod("1", "Mod Number One", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
+        new Mod("2", "Mod Number Two", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
+        new Mod("3", "Mod Number Three", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
+        new Mod("4", "Mod Number Four", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
+        new Mod("5", "Mod Number Five", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
+        new Mod("6", "Mod Number Six", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
+        new Mod("7", "Mod Number Seven", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary()),
+        new Mod("8", "Mod Number Eight", "Mock", OffsetDateTime.now(), OffsetDateTime.now(), uploader, List.of(), mod(), modReviewsSummary())
     );
+  }
+
+  @Override
+  public List<Leaderboard> getLeaderboards() {
+    return List.of(
+        new Leaderboard("1", OffsetDateTime.now(), OffsetDateTime.now(), "mock", "mock", "mock")
+    );
+  }
+
+  @Override
+  public List<LeaderboardEntry> getAllLeaderboardEntries(String leaderboardTechnicalName) {
+    return Collections.emptyList();
+  }
+
+  @Override
+  public Tuple<List<LeaderboardEntry>, java.util.Map<String, ?>> getLeaderboardEntriesWithMeta(String leaderboardTechnicalName, int count, int page) {
+    return new Tuple<>(Collections.emptyList(), Collections.emptyMap());
+  }
+
+  @Override
+  public List<LeaderboardEntry> getLeaderboardEntriesForPlayer(int playerId) {
+    return Collections.emptyList();
   }
 
   private ModVersion mod() {
     return new ModVersion();
+  }
+
+  private ModReviewsSummary modReviewsSummary() {
+    return new ModReviewsSummary();
   }
 
   @Override
@@ -109,63 +137,48 @@ public class MockFafApiAccessor implements FafApiAccessor {
   }
 
   @Override
-  public List<Ladder1v1LeaderboardEntry> getLadder1v1Leaderboard() {
-    return Collections.emptyList();
-  }
-
-  @Override
-  public List<GlobalLeaderboardEntry> getGlobalLeaderboard() {
-    return Collections.emptyList();
-  }
-
-  @Override
-  public Ladder1v1LeaderboardEntry getLadder1v1EntryForPlayer(int playerId) {
-    return null;
-  }
-
-  @Override
-  public List<GamePlayerStats> getGamePlayerStats(int playerId, KnownFeaturedMod knownFeaturedMod) {
-    return Collections.emptyList();
+  public List<LeaderboardRatingJournal> getRatingJournal(int playerId, int leaderboardId) {
+    return List.of();
   }
 
   @Override
   public Tuple<List<Map>, java.util.Map<String, ?>> getMapsByIdWithMeta(List<Integer> mapIdList, int count, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
   public Tuple<List<Map>, java.util.Map<String, ?>> getMostPlayedMapsWithMeta(int count, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
   public Tuple<List<Map>, java.util.Map<String, ?>> getHighestRatedMapsWithMeta(int count, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
   public Tuple<List<Map>, java.util.Map<String, ?>> getNewestMapsWithMeta(int count, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
   public List<Game> getLastGamesOnMap(int playerId, String mapVersionId, int count) {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
   public void uploadMod(Path file, ByteCountListener listener) {
-
+    // do nothing
   }
 
   @Override
   public void uploadMap(Path file, boolean isRanked, ByteCountListener listener) {
-
+    // do nothing
   }
 
   @Override
   public List<CoopMission> getCoopMissions() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
@@ -175,22 +188,22 @@ public class MockFafApiAccessor implements FafApiAccessor {
 
   @Override
   public List<FeaturedModFile> getFeaturedModFiles(FeaturedMod featuredMod, Integer version) {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
   public Tuple<List<Game>, java.util.Map<String, ?>> getNewestReplaysWithMeta(int count, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
   public Tuple<List<Game>, java.util.Map<String, ?>> getHighestRatedReplaysWithMeta(int count, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
   public Tuple<List<Game>, java.util.Map<String, ?>> findReplaysByQueryWithMeta(String query, int maxResults, int page, SortConfig sortConfig) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
@@ -199,8 +212,18 @@ public class MockFafApiAccessor implements FafApiAccessor {
   }
 
   @Override
+  public Optional<MapVersion> getMapLatestVersion(String mapFolderName) {
+    return Optional.empty();
+  }
+
+  @Override
   public List<com.faforever.client.api.dto.Player> getPlayersByIds(Collection<Integer> playerIds) {
-    return Collections.emptyList();
+    return List.of();
+  }
+
+  @Override
+  public Optional<Player> queryPlayerByName(String playerName) {
+    return Optional.empty();
   }
 
   @Override
@@ -240,7 +263,7 @@ public class MockFafApiAccessor implements FafApiAccessor {
 
   @Override
   public List<TutorialCategory> getTutorialCategories() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
@@ -250,7 +273,7 @@ public class MockFafApiAccessor implements FafApiAccessor {
 
   @Override
   public Tuple<List<Map>, java.util.Map<String, ?>> findMapsByQueryWithMeta(SearchConfig searchConfig, int page, int count) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
@@ -275,22 +298,37 @@ public class MockFafApiAccessor implements FafApiAccessor {
 
   @Override
   public Tuple<List<Mod>, java.util.Map<String, ?>> findModsByQueryWithMeta(SearchConfig query, int maxResults, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
-  public Tuple<List<Ladder1v1Map>, java.util.Map<String, ?>> getLadder1v1MapsWithMeta(int count, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+  public List<MatchmakerQueueMapPool> getMatchmakerPools(int matchmakerQueueId) {
+    return List.of();
+  }
+
+  @Override
+  public Optional<MatchmakerQueue> getMatchmakerQueue(String technicalName) {
+    return Optional.empty();
   }
 
   @Override
   public List<Tournament> getAllTournaments() {
-    return Collections.emptyList();
+    return List.of();
+  }
+
+  @Override
+  public List<ModerationReport> getPlayerModerationReports(int playerId) {
+    return null;
+  }
+
+  @Override
+  public void postModerationReport(com.faforever.client.reporting.ModerationReport report) {
+    // do nothing
   }
 
   @Override
   public Tuple<List<MapVersion>, java.util.Map<String, ?>> getOwnedMapsWithMeta(int playerId, int loadMoreCount, int page) {
-    return new Tuple(Collections.emptyList(), Collections.emptyMap());
+    return new Tuple<>(List.of(), Collections.emptyMap());
   }
 
   @Override
@@ -309,6 +347,6 @@ public class MockFafApiAccessor implements FafApiAccessor {
 
   @Override
   public List<CoopResult> getCoopLeaderboard(String missionId, int numberOfPlayers) {
-    return Collections.emptyList();
+    return List.of();
   }
 }
